handle OG for cozy-corner category

--- a/themes/omid-dev/layouts/partials/templates/_funcs/get-featured-image.html
+++ b/themes/omid-dev/layouts/partials/templates/_funcs/get-featured-image.html
@@ -16,6 +16,8 @@
                 {{ $basePath = "/opengraph/electronics.jpg" }}
             {{ else if eq (lower .) "health" }}
                 {{ $basePath = "/opengraph/health.jpg" }}
+            {{ else if eq (lower .) "cozy corner" }}
+                {{ $basePath = "/opengraph/cozy-corner.jpg" }}
             {{ end }}
         {{ end }}
     {{ end }}
