--- a/themes/omid-dev/layouts/_default/now.html
+++ b/themes/omid-dev/layouts/_default/now.html
@@ -6,13 +6,13 @@
     <h1 class="post-title entry-hint-parent">
       {{ .Title }}
     </h1>
-    <div class="now-meta">
-      <span class="now-badge">
+    <div class="page-metadata">
+      <span class="meta-badge">
         <i class="fa-solid fa-clock-rotate-left"></i>
         {{ T "last_updated" | default "Last updated" }}: {{ .Site.Data.now.last_updated }}
       </span>
       {{- if .Site.Data.now.location -}}
-      <span class="now-location">
+      <span class="meta-location">
         <i class="fa-solid fa-location-dot"></i>
         {{ .Site.Data.now.location }}
       </span>
